--- a/ulid-tight.cabal
+++ b/ulid-tight.cabal
@@ -35,10 +35,12 @@ common depends
     build-depends:
           base < 4.20
         , binary < 0.9
+        , deepseq < 1.6
         , hashable < 1.5
         , primitive < 0.10
         , random >= 1.2 && < 1.3
         , text < 2.2
+        , time < 1.13
 
 common warnings
     ghc-options: -Wall
@@ -51,9 +53,7 @@ library
     -- other-extensions:
     build-depends:
           bytestring < 0.13
-        , deepseq < 1.6
         , template-haskell < 2.22
-        , time < 1.13
     hs-source-dirs:   src
     default-language: Haskell2010
 
@@ -70,3 +70,12 @@ test-suite ulid-tight-test
         , ulid-tight
     build-tool-depends:
           hspec-discover:hspec-discover < 2.12
+
+benchmark ulid-tight-bench
+    import:           depends, warnings
+    default-language: Haskell2010
+    type:             exitcode-stdio-1.0
+    hs-source-dirs:   bench
+    main-is:          Main.hs
+    build-depends:
+          ulid-tight
